* Refactored registration processes and GUI (#1285)
* Improved use of prngs (mt19937 now used throughout in place of rand() etc.) (!689)
* Refactored networking code, add offline mode and add Gaia archive status indication (!687)
* Improved the usability of merging CFA sequences (!759)
* Allowed the token $T to be used in PixelMath (!768)
* Make PixelMath follows bit depth preferences (#1100)

**GUI improvements:**
* Split up the monolithic glade UI file (!550)
* Refactored catalogue management, making it consistent across all catalogues (#1154::0 and !579)
* Refactored astrometry GUI (#1154::6 and !636)
* Added better registration options to RGB align right-click menu and improve DATE-OBS handling in LRGB composition (!620)
* Made reset buttons reset all GUI elements in a dialog window (!719)

**Fixes:**
* Fixed PRISM SITELAT/SITELONG keywords data (#1126)
* Fixed running command catsearch threaded to avoid GUI freeze (#1167)
* Fixed https requests with libcurl for Windows crossroad builds (#604)
* Fixed wavelets redraw (#1236)
* Fixed a crash in asinh (#1246)
* Fixed several dialogs so they work after redo (#1276, #1279)
* Fixed bug where Bayer pattern was not read as needed for seqpsf (#1297)
* Fixed handling wide-char characters in filenames on Windows (with cfitsio >= 4.4) (#1324)
* Fixed bug in GHT when only 1 or 2 channels are selected (#1329)
* Fixed GHT and HT sharing states for some GUI elements (#1357)
* Blocked certain processes when a processing dialog box is open (#1355)
* Fixed a bug with histogram / GHT widgets updating the image when the preview toggle was off (#1358)
* Checked for and resolve pixel values outside [0 1] before certain operations (!697)
* Fixed seqpsf for images which write ADU in float (#1322)
* Fixed crash in catsearch when object is unknown (#1383)

**Misc:**
* Removed glib-networking as a dependency (#1157)
* Removed calls to deprecated OpenMP functions (!662)