@@ -30,12 +30,12 @@
 #include "core/siril.h"
 #include "core/proto.h"
 #include "algos/siril_random.h"
+#include "algos/demosaicing.h"
+#include "algos/extraction.h"
 #include "core/processing.h"
-#include "core/OS_utils.h"
 #include "core/siril_log.h"
 #include "io/image_format_fits.h"
 #include "io/sequence.h"
-#include "algos/geometry.h"
 #include "algos/sorting.h"
 #include "algos/statistics.h"
 #include "gui/message_dialog.h"
@@ -880,6 +880,165 @@ gpointer remove_gradient_from_image(gpointer p) {
 	return GINT_TO_POINTER(0);
 }
 
+static GSList* rescale_sample_list_for_cfa(GSList *original_list, fits *fit) {
+	GSList *new_list = NULL;
+	GSList *current = original_list;
+	int nx = fit->rx;
+	int ny = fit->ry;
+	int radius = SAMPLE_SIZE / 2;
+
+	float *image = convert_fits_to_luminance(fit, MULTI_THREADED);	// upside down
+	if (!image) {
+		PRINT_ALLOC_ERR;
+		return NULL;
+	}
+	// Traverse the original list in reverse order because g_slist_prepend is more efficient
+	while (current != NULL) {
+		background_sample *original_sample = (background_sample *)current->data;
+		int x = min(nx - 1 - radius, max(radius, round_to_int((float) original_sample->position.x / 2.f)));
+		int y = min(ny - 1 - radius, max(radius, round_to_int((float) original_sample->position.y / 2.f)));
+		// Generate a new sample at half the original coordinates
+		background_sample *new_sample = get_sample(image, x, y, nx, ny);
+
+		// Add the new sample to the new list
+		new_list = g_slist_prepend(new_list, new_sample);
+
+		current = current->next;
+	}
+
+	free(image);
+
+	// Reverse the list to maintain the original order
+	new_list = g_slist_reverse(new_list);
+
+	return new_list;
+}
+
+/* uses samples from com.grad_samples */
+gpointer remove_gradient_from_cfa_image(gpointer p) {
+	struct background_data *args = (struct background_data *)p;
+	sensor_pattern pattern;
+	if (!strncmp(gfit.keywords.bayer_pattern, "RGGB", 4)) {
+		pattern = BAYER_FILTER_RGGB;
+	} else if (!strncmp(gfit.keywords.bayer_pattern, "BGGR", 4)) {
+		pattern = BAYER_FILTER_BGGR;
+	} else if (!strncmp(gfit.keywords.bayer_pattern, "GBRG", 4)) {
+		pattern = BAYER_FILTER_GBRG;
+	} else if (!strncmp(gfit.keywords.bayer_pattern, "GRBG", 4)) {
+		pattern = BAYER_FILTER_GBRG;
+	} else {
+		siril_log_color_message(_("Error: unsupported CFA pattern for this operation.\n"), "red");
+		return GINT_TO_POINTER(1);
+	}
+	gchar *error = NULL;
+	struct timeval t_start, t_end;
+	gettimeofday(&t_start, NULL);
+
+	// Allocate an array of fits* and the fits objects themselves. These will hold the subchannels
+	fits** cfachans = calloc(4, sizeof(fits*));
+	for (int i = 0 ; i < 4 ; i++) {
+		cfachans[i] = calloc(1, sizeof(fits));
+	}
+
+	// Split the FITS into the 4 subchannels
+	int ret = 1;
+	if (gfit.type == DATA_USHORT) {
+		ret = split_cfa_ushort(&gfit, cfachans[0], cfachans[1], cfachans[2], cfachans[3]);
+	}
+	else if (gfit.type == DATA_FLOAT) {
+		ret = split_cfa_float(&gfit, cfachans[0], cfachans[1], cfachans[2], cfachans[3]);
+	}
+	if (ret) {
+		siril_log_color_message(_("Error splitting into CFA subcannels, aborting...\n"), "red");
+		for (int i = 0 ; i < 4 ; i++) {
+			clearfits(cfachans[i]);
+			free(cfachans[i]);
+		}
+		free(cfachans);
+		return GINT_TO_POINTER(1);
+	}
+
+	for (int i = 0; i < 4; i++) {
+		fits *subchannel = cfachans[i];
+
+		GSList *samples = rescale_sample_list_for_cfa(com.grad_samples, subchannel);
+
+		if (!samples) {
+			siril_log_color_message(_("Failed to adapt background samples for CFA image\n"), "red");
+			return GINT_TO_POINTER(1);
+		}
+
+		double *background = (double*)malloc(subchannel->naxes[0] * subchannel->naxes[1] * sizeof(double));
+		if (!background) {
+			PRINT_ALLOC_ERR;
+			siril_log_message(_("Out of memory - aborting"));
+			return GINT_TO_POINTER(1);
+		}
+
+		const size_t n = subchannel->naxes[0] * subchannel->naxes[1];
+		double *image = malloc(n * sizeof(double));
+		if (!image) {
+			free(background);
+			free_background_sample_list(samples);
+			PRINT_ALLOC_ERR;
+			return GINT_TO_POINTER(1);
+		}
+
+		double background_mean = get_background_mean(samples, 1);
+		/* compute background */
+		gboolean interpolation_worked = TRUE;
+		if (args->interpolation_method == BACKGROUND_INTER_POLY) {
+			interpolation_worked = computeBackground_Polynom(samples, background, 0,
+					subchannel->rx, subchannel->ry, args->degree, &error);
+		} else {
+			interpolation_worked = computeBackground_RBF(samples, background, 0,
+					subchannel->rx, subchannel->ry, args->smoothing, &error, args->threads);
+		}
+
+		if (!interpolation_worked) {
+			free(image);
+			free(background);
+			queue_error_message_dialog(_("Not enough samples."), error);
+			if (!args->from_ui) {
+				free_background_sample_list(com.grad_samples);
+				com.grad_samples = NULL;
+			}
+			for (int i = 0 ; i < 4 ; i++) {
+				clearfits(cfachans[i]);
+				free(cfachans[i]);
+			}
+			free(cfachans);
+			free(args);
+			siril_add_idle(end_background, NULL);
+			return GINT_TO_POINTER(1);
+		}
+		/* remove background */
+		convert_fits_to_img(subchannel, image, 0, args->dither);
+		remove_gradient(image, background, background_mean, n, args->correction, MULTI_THREADED);
+		convert_img_to_fits(image, subchannel, 0);
+		free(image);
+		free(background);
+		free_background_sample_list(samples);
+
+	}
+	fits *out = merge_cfa(cfachans[0], cfachans[1], cfachans[2], cfachans[3], pattern);
+	fits_swap_image_data(out, &gfit); // Efficiently move the merged pixeldata from out to gfit
+	clearfits(out);
+	free(out);
+	siril_log_message(_("Background with %s interpolation computed for CFA image.\n"),
+			(args->interpolation_method == BACKGROUND_INTER_POLY) ? "polynomial" : "RBF");
+	gettimeofday(&t_end, NULL);
+	show_time(t_start, t_end);
+	/* free memory */
+	invalidate_stats_from_fit(&gfit);
+	if (!args->from_ui) {
+		free_background_sample_list(com.grad_samples);
+		com.grad_samples = NULL;
+	}
+	siril_add_idle(end_background, args);
+	return GINT_TO_POINTER(0);
+}
+
 /** Apply for sequence **/
 
 static int background_image_hook(struct generic_seq_args *args, int o, int i, fits *fit,
@@ -948,8 +1107,137 @@ static int background_image_hook(struct generic_seq_args *args, int o, int i, fi
 	return 0;
 }
 
+/*******************************************************************************************
+ * In the case of Bayer CFA images, we can consider the image as 4 interleaved sub-images: *
+ * we split the image into these 4 sub-images and apply background removal to each         *
+ * independently. We allow for different gradients in each sub-image as this may           *
+ * realistically model a frequency dependence of the observed gradient, for example        *
+ * moonlight.                                                                              *
+ * On completion of gradient removal from each sub-image the sub-images are reassembled    *
+ * ready for drizzle.                                                                      *
+ ******************************************************************************************/
+
+static int bgcfa_image_hook(struct generic_seq_args *args, int o, int i, fits *fit,
+		rectangle *_, int threads) {
+	struct background_data *b_args = (struct background_data*) args->user;
+	if (b_args->interpolation_method == BACKGROUND_INTER_RBF) {
+		siril_log_color_message(_("Warning: RBF background removal is not recommended for CFA images. Only linear background removal is recommended.\n"), "salmon");
+	} else if (b_args->degree > 1) {
+		siril_log_color_message(_("Warning: polynomial background removal order > 1 is not recommended for CFA images. Only linear background removal is recommended.\n"), "salmon");
+	}
+	// Obtain CFA pattern as a sensor_pattern
+	fits metadata = { 0 };
+	seq_read_frame_metadata(args->seq, i, &metadata);
+	sensor_pattern pattern;
+	if (!strncmp(metadata.keywords.bayer_pattern, "RGGB", 4)) {
+		pattern = BAYER_FILTER_RGGB;
+	} else if (!strncmp(metadata.keywords.bayer_pattern, "BGGR", 4)) {
+		pattern = BAYER_FILTER_BGGR;
+	} else if (!strncmp(metadata.keywords.bayer_pattern, "GBRG", 4)) {
+		pattern = BAYER_FILTER_GBRG;
+	} else if (!strncmp(metadata.keywords.bayer_pattern, "GRBG", 4)) {
+		pattern = BAYER_FILTER_GBRG;
+	} else {
+		siril_log_color_message(_("Error: unsupported CFA pattern for this operation.\n"), "red");
+		return 1;
+	}
+
+	// Allocate an array of fits* and the fits objects themselves. These will hold the subchannels
+	fits** cfachans = calloc(4, sizeof(fits*));
+	for (int i = 0 ; i < 4 ; i++) {
+		cfachans[i] = calloc(1, sizeof(fits));
+	}
+
+	// Split the FITS into the 4 subchannels
+	int ret = 1;
+	if (fit->type == DATA_USHORT) {
+		ret = split_cfa_ushort(fit, cfachans[0], cfachans[1], cfachans[2], cfachans[3]);
+	}
+	else if (fit->type == DATA_FLOAT) {
+		ret = split_cfa_float(fit, cfachans[0], cfachans[1], cfachans[2], cfachans[3]);
+	}
+	if (ret) {
+		siril_log_color_message(_("Error splitting into CFA subcannels, aborting...\n"), "red");
+		for (int i = 0 ; i < 4 ; i++) {
+			clearfits(cfachans[i]);
+			free(cfachans[i]);
+		}
+		free(cfachans);
+		return 1;
+	}
+
+	// Clear the original fit image data, we will put the result back into it later
+	free(fit->data);
+	free(fit->fdata);
+	fit->data = fit->pdata[0] = fit->pdata[1] = fit->pdata[2] = NULL;
+	fit->fdata = fit->fpdata[0] = fit->fpdata[1] = fit->fpdata[2] = NULL;
+
+
+	// Carry out background removal on each subchannel in turn
+	for (int i = 0 ; i < 4 ; i++) {
+		fits *subchannel = cfachans[i];
+		double *background = (double*)malloc(subchannel->naxes[0] * subchannel->naxes[1] * sizeof(double));
+		if (!background) {
+			PRINT_ALLOC_ERR;
+			siril_log_message(_("Out of memory - aborting"));
+			return 1;
+		}
+
+		const char *err;
+		GSList *samples = generate_samples(subchannel, b_args->nb_of_samples, b_args->tolerance, SAMPLE_SIZE, &err, (threading_type)threads);
+		if (!samples) {
+			siril_log_color_message(_("Failed to generate background samples for image %d: %s\n"), "red", i, _(err));
+			free(background);
+			return 1;
+		}
+
+		const size_t n = subchannel->naxes[0] * subchannel->naxes[1];
+		double *image = malloc(n * sizeof(double));
+		if (!image) {
+			free(background);
+			free_background_sample_list(samples);
+			PRINT_ALLOC_ERR;
+			return 1;
+		}
+
+		double background_mean = get_background_mean(samples, subchannel->naxes[2]);
+		/* compute background */
+		gboolean interpolation_worked = TRUE;
+		gchar *error = NULL;
+		if (b_args->interpolation_method == BACKGROUND_INTER_POLY){
+			interpolation_worked = computeBackground_Polynom(samples, background, 0, subchannel->rx, subchannel->ry, b_args->degree, &error);
+		} else {
+			interpolation_worked = computeBackground_RBF(samples, background, 0, subchannel->rx, subchannel->ry, b_args->smoothing, &error, threads);
+		}
+
+		if (!interpolation_worked) {
+			if (error) {
+				siril_log_message(error);
+			}
+			free(image);
+			free(background);
+			free_background_sample_list(samples);
+			return 1;
+		}
+		/* remove background */
+		convert_fits_to_img(subchannel, image, 0, b_args->dither);
+		remove_gradient(image, background, background_mean, subchannel->naxes[0] * subchannel->naxes[1], b_args->correction, (threading_type)threads);
+		convert_img_to_fits(image, subchannel, 0);
+		/* free memory */
+		free(image);
+		free(background);
+		free_background_sample_list(samples);
+	}
+	fits *out = merge_cfa(cfachans[0], cfachans[1], cfachans[2], cfachans[3], pattern);
+	fits_swap_image_data(out, fit); // Efficiently move the merged pixeldata from out to fit
+	clearfits(out);
+	free(out);
+	return 0;
+}
+
 static int background_mem_limits_hook(struct generic_seq_args *args, gboolean for_writer) {
 	unsigned int MB_per_image, MB_avail;
+
 	int limit = compute_nb_images_fit_memory(args->seq, 1.0, FALSE, &MB_per_image, NULL, &MB_avail);
 	unsigned int required = MB_per_image;
 	if (limit > 0) {
@@ -964,6 +1252,11 @@ static int background_mem_limits_hook(struct generic_seq_args *args, gboolean fo
 		 * remove_gradient_from_image allocates the image            to rx * ry * sizeof(double)
 		 *
 		 * so at maximum, ignoring the samples, we need 2 times the double channel size.
+		 *
+		 * Despite creating the CFA subsequences, peak memory use does not increase when handling
+		 * a CFA sequence as we free the pixel data in fit before starting to process each of the
+		 * subchannels (essentially we are doing the same operation on 4 FITS each 1/4 the size)
+		 *
 		 */
 		uint64_t double_channel_size = args->seq->rx * args->seq->ry * sizeof(double);
 		unsigned int double_channel_size_MB = double_channel_size / BYTES_IN_A_MB;
@@ -1018,13 +1311,22 @@ int bg_extract_finalize_hook(struct generic_seq_args *args) {
 }
 
 void apply_background_extraction_to_sequence(struct background_data *background_args) {
+	fits metadata = { 0 };
 	struct generic_seq_args *args = create_default_seqargs(background_args->seq);
+	if (seq_read_frame_metadata(background_args->seq, sequence_find_refimage(background_args->seq), &metadata)) {
+		siril_log_color_message(_("Error reading reference metadata.\n"), "red");
+		return;
+	}
+	background_args->is_cfa = (!strncmp(metadata.keywords.bayer_pattern, "RGGB", 4) ||
+							!strncmp(metadata.keywords.bayer_pattern, "BGGR", 4) ||
+							!strncmp(metadata.keywords.bayer_pattern, "GBRG", 4) ||
+							!strncmp(metadata.keywords.bayer_pattern, "GRBG", 4));
 	args->filtering_criterion = seq_filter_included;
 	args->nb_filtered_images = background_args->seq->selnum;
 	args->compute_mem_limits_hook = background_mem_limits_hook;
 	args->prepare_hook = seq_prepare_hook;
 	args->finalize_hook = bg_extract_finalize_hook;
-	args->image_hook = background_image_hook;
+	args->image_hook = background_args->is_cfa ? bgcfa_image_hook : background_image_hook;
 	args->stop_on_error = FALSE;
 	args->description = _("Background Extraction");
 	args->has_output = TRUE;
@@ -1051,4 +1353,3 @@ gdouble background_sample_get_size(background_sample *sample) {
 point background_sample_get_position(background_sample *sample) {
 	return sample->position;
 }
-
