@@ -62,7 +62,6 @@
 #include "io/single_image.h"
 #include "io/siril_catalogues.h"
 #include "io/local_catalogues.h"
-#include "io/remote_catalogues.h"
 #include "io/FITS_symlink.h"
 #include "io/fits_keywords.h"
 #include "drizzle/cdrizzleutil.h"
@@ -82,7 +81,6 @@
 #include "gui/registration.h"
 #include "gui/registration_preview.h"
 #include "gui/script_menu.h"
-#include "gui/preferences.h"
 #include "gui/unpurple.h"
 #include "filters/asinh.h"
 #include "filters/banding.h"
@@ -124,19 +122,15 @@
 #include "algos/geometry.h"
 #include "algos/photometric_cc.h"
 #include "algos/fix_xtrans_af.h"
-#include "io/annotation_catalogues.h"
 #include "algos/comparison_stars.h"
-#include "opencv/opencv.h"
 #include "stacking/stacking.h"
 #include "stacking/sum.h"
 #include "registration/registration.h"
-#include "registration/matching/match.h"
 #include "livestacking/livestacking.h"
 #include "pixelMath/pixel_math_runner.h"
 #include "git-version.h"
 
 #include "command.h"
-#include "command_def.h"
 #include "command_list.h"
 #include "command_line_processor.h"
 
@@ -5874,17 +5868,21 @@ int process_subsky(int nb) {
 	if (is_sequence) {
 		args->seq = seq;
 		args->seqEntry = prefix ? prefix : strdup("bkg_");
-		sequence_cfa_warning_check(seq);
-
 		apply_background_extraction_to_sequence(args);
 	} else {
 		args->seq = NULL;
 		args->seqEntry = NULL;
 		args->fit = &gfit;
-		image_cfa_warning_check();
+
+		// Check if the image has a Bayer CFA pattern
+		gboolean is_cfa = (!strncmp(gfit.keywords.bayer_pattern, "RGGB", 4) ||
+						  !strncmp(gfit.keywords.bayer_pattern, "BGGR", 4) ||
+						  !strncmp(gfit.keywords.bayer_pattern, "GBRG", 4) ||
+						  !strncmp(gfit.keywords.bayer_pattern, "GRBG", 4));
 
 		if (!generate_background_samples(samples, tolerance)) {
-			start_in_new_thread(remove_gradient_from_image, args);
+			start_in_new_thread(is_cfa ? remove_gradient_from_cfa_image :
+								remove_gradient_from_image, args);
 		} else {
 			siril_log_color_message(_("Error generating background samples\n"), "red");
 			free(args);
